Resolve layout issues on Thesis Exhibit section

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -242,48 +242,44 @@ ul li {
 
 /* Thesis Exhibit Section */
 
-.thesis-exhibit {
-  width: 100%;
-  height: auto;
-  background-color: white;
-}
-
 .thesis-exhibit h1 {
+  margin: 0 auto;
+  padding: 2rem 0;
   text-align: center;
-  padding: 2rem 0 2rem 0;
   color: #464646;
   font-weight: bold;
   font-size: 2.5rem;
-  margin: 0 auto;
+}
+
+.thesis-content {
+  display: flex;
+  width: 100%;
+  height: auto;
 }
 
 .video {
   width: 60%;
   height: auto;
+  padding: 0 1.5rem 2rem 1.5rem;
 }
 
-.thesis-content {
-  display: inline-flex;
-  width: 100%;
-  height: auto;
-}
-
-.exhibits-section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.exhibits {
   width: 40%;
   height: auto;
 }
 
 .exhibit {
+  background-color: white;
   display: flex;
-  flex-direction: row;
   width: 100%;
-  height: auto;
+  align-items: center;
 }
 
-.exhibit-image {
+.exhibit:hover {
+  background-color: lightgray
+}
+
+.exhibit img {
   width: 35%;
   height: auto;
   padding: 1rem;
@@ -291,7 +287,14 @@ ul li {
 
 .exhibit-text {
   width: 65%;
-  height: auto;
+}
+
+.video video {
+  padding-bottom: 1.5rem;
+}
+
+.video p {
+  padding: .5rem 0 2rem 0;
 }
 
 /* Footer Section */
